--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,10 @@ dist.jar=${dist.dir}/AutomaticDefinitionFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jsoup-1.11.1.jar=/home/kevin/Documents/Code/jsoup-1.11.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JSoup.classpath}:\
-    ${file.reference.jsoup-1.11.1.jar}
+    ${libs.JSoup.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
